# Lepton3_BBB

./: CMakeLists.txt
grabber_lib/: CMakeLists.txt
grabber_lib/include/: Lepton3.hpp
grabber_lib/src/: Lepton3.cpp
opencv_demo/: CMakeLists.txt  am335x-pocketbeagle-adafruit28.dts  irdemo_PocketBeagleLogo.raw.xz  opencv_demo.cpp  opencv_demo.service
